--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.11.5",
+    "@fortawesome/fontawesome-free": "^5.15.2",
     "material-icons": "^0.3.1",
     "normalize.css": "^8.0.1"
   }
