--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,8 @@
     "linebreak-style": "off",
     "import/no-named-as-default": "off",
     "import/no-unresolved": "off",
+    "import/no-cycle":"off",
+    "class-methods-use-this": "off",
     "no-param-reassign": [
       "error",
       {
