add new util - getDoomElement

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
     "import/no-unresolved": "off",
     "import/no-cycle":"off",
     "class-methods-use-this": "off",
+    "no-unused-vars": "off",
     "no-param-reassign": [
       "error",
       {
